--- a/src/patternfly/components/Nav/nav.scss
+++ b/src/patternfly/components/Nav/nav.scss
@@ -75,10 +75,9 @@
   --#{$nav}__subnav--PaddingBlockStart: var(--#{$nav}__item--RowGap); // needed to keep focus outline on first item from being cut off
   --#{$nav}__subnav--PaddingBlockEnd: var(--#{$nav}__item--RowGap); // needed to keep focus outline on last item from being cut off
   --#{$nav}__subnav--PaddingInlineStart: var(--pf-t--global--spacer--md);
-  --#{$nav}__subnav--TransitionProperty: opacity;
-  --#{$nav}__subnav--TransitionDuration--expansion: var(--pf-t--global--motion--duration--slide-in--default);
-  --#{$nav}__subnav--hidden--TransitionDuration--expansion: var(--pf-t--global--motion--duration--slide-in--short);
-  --#{$nav}__subnav--TransitionTimingFunction--expansion: var(--pf-t--global--motion--timing-function--default);
+  --#{$nav}__subnav--TransitionDuration--expand: var(--pf-t--global--motion--duration--slide-in--default);
+  --#{$nav}__subnav--TransitionDuration--collapse: var(--pf-t--global--motion--duration--slide-in--short);
+  --#{$nav}__subnav--TransitionTimingFunction--expand: var(--pf-t--global--motion--timing-function--default);
 
   // * Nav scroll button
   --#{$nav}__scroll-button--BorderColor: var(--pf-t--global--border--color--default);
@@ -206,27 +205,21 @@
   padding-block-end: var(--#{$nav}__subnav--PaddingBlockEnd);
   padding-inline-start: var(--#{$nav}__subnav--PaddingInlineStart); // indent nested lists
   overflow-y: clip;
-  transition-timing-function: var(--#{$nav}__subnav--TransitionTimingFunction--expansion);
-  transition-duration: var(--#{$nav}__subnav--TransitionDuration--expansion);
-  transition-property: var(--#{$nav}__subnav--TransitionProperty);
+  transition-delay: 0s, var(--#{$nav}__subnav--TransitionDelay--expand--visibility, 0s);
+  transition-timing-function: var(--#{$nav}__subnav--TransitionTimingFunction--expand);
+  transition-duration: var(--#{$nav}__subnav--TransitionDuration--expand), 0s;
+  transition-property: opacity, visibility;
   
   &[hidden] {
-    --#{$nav}__subnav--TransitionDuration--expansion: var(--#{$nav}__subnav--hidden--TransitionDuration--expansion);
+    --#{$nav}__subnav--TransitionDelay--expand--visibility: var(--#{$nav}__subnav--TransitionDuration--expand);
+    --#{$nav}__subnav--TransitionDuration--expand: var(--#{$nav}__subnav--TransitionDuration--collapse);
     --#{$nav}__subnav--PaddingBlockStart: 0;
     --#{$nav}__subnav--PaddingBlockEnd: 0;
 
     display: grid; // overrides `display: none` - element is hidden via `visibility: hidden`
     grid-template-rows: 0fr;
-    opacity: 0;
-    animation-name: pf-remove-tab-focus;
-    animation-delay: var(--#{$nav}__subnav--TransitionDuration--expansion);
-    animation-fill-mode: forwards;
-  }
-}
-
-@keyframes pf-remove-tab-focus {
-  to {
     visibility: hidden;
+    opacity: 0;
   }
 }
 
