--- a/src/patternfly/components/Truncate/truncate.hbs
+++ b/src/patternfly/components/Truncate/truncate.hbs
@@ -1,4 +1,4 @@
-<span class="{{pfv}}truncate{{#if truncate--ShouldIgnoreResize}} pf-m-ignore-resizing{{/if}}{{#if truncate--modifier}} {{truncate--modifier}}{{/if}}"
+<span class="{{pfv}}truncate{{#if truncate--IsFixed}} pf-m-fixed{{/if}}{{#if truncate--modifier}} {{truncate--modifier}}{{/if}}"
   {{#if truncate--attribute}}
     {{{truncate--attribute}}}
   {{/if}}>
