chore(Truncate): updated docs verbiage and styling

--- a/src/patternfly/components/Truncate/truncate-omission.hbs
+++ b/src/patternfly/components/Truncate/truncate-omission.hbs
@@ -1,8 +1,8 @@
 <span class="{{pfv}}truncate__omission{{#if truncate-omission--modifier}} {{truncate-omission--modifier}}{{/if}}"
+  aria-hidden="true"
   {{#if truncate-start--attribute}}
     {{{truncate-start--attribute}}}
-  {{/if}}
-  aria-hidden="true">
+  {{/if}}>
   {{#if truncate-omission--text}}
     {{{truncate-omission--text}}}
   {{else}}
