--- a/src/patternfly/components/InputGroup/input-group.scss
+++ b/src/patternfly/components/InputGroup/input-group.scss
@@ -32,11 +32,21 @@
   --#{$input-group}__item--m-disabled__text--Color: var(--pf-t--global--text--color--on-disabled);
   --#{$input-group}__item--m-disabled--BackgroundColor: var(--pf-t--global--background--color--disabled--default);
 
-    // Input group search expanded
-  --#{$input-group}__text-input--TransitionTimingFunction--Opacity: var(--pf-t--global--motion--timing-function--default);
-  --#{$input-group}__text-input--TransitionDuration--Opacity: var(--pf-t--global--motion--duration--fade--default);
-  --#{$input-group}__text-input--TransitionTimingFunction--Width: var(--pf-t--global--motion--timing-function--default);
-  --#{$input-group}__text-input--TransitionDuration--Width: var(--pf-t--global--motion--duration--slide-in--short);
+  // Input group search expanded
+  --#{$input-group}-expandable__search-input--TransitionTimingFunction--expand: var(--pf-t--global--motion--timing-function--decelerate);
+  --#{$input-group}-expandable__search-input--TransitionTimingFunction--collapse: var(--pf-t--global--motion--timing-function--accelerate);
+  --#{$input-group}-expandable__search-input--TransitionDuration--expand: var(--pf-t--global--motion--duration--fade--default);
+  --#{$input-group}-expandable__search-input--TransitionDuration--collapse: var(--pf-t--global--motion--duration--fade--default);
+  --#{$input-group}-expandable__search-input--ScaleX: 1;
+  --#{$input-group}-expandable__search-input--TransformOriginX--expand-left: 100%;
+  --#{$input-group}-expandable__search-input--TransformOriginX--expand-right: 0;
+  --#{$input-group}-expandable__search-input--TransformOriginX: var(--#{$input-group}-expandable__search-input--TransformOriginX--expand-right);
+  --#{$input-group}-expandable__button-icon--TransitionDuration--Opacity: var(--pf-t--global--motion--duration--fade--default);
+  --#{$input-group}-expandable__button-icon--TransitionTimingFunction--Opacity: var(--pf-t--global--motion--timing-function--default);
+  
+  @media (prefers-reduced-motion: no-preference) {
+    --#{$input-group}-expandable__search-input--ScaleX: .7;
+  }
 }
 
 .#{$input-group} {
@@ -44,46 +54,59 @@
   gap: var(--#{$input-group}--Gap);
   width: 100%;
 }
-
-@mixin pf-v6-c-input-group-fade-in {
-    animation-name: #{$input-group}-fade-in;
-    animation-duration: var(
-      --#{$input-group}__text-input--TransitionDuration--Opacity
-    );
-    animation-timing-function: var(
-      --#{$input-group}__text-input--TransitionTimingFunction--Opacity
-    );
-
-    @keyframes #{$input-group}-fade-in {
-      from {
-        opacity: 0;
-      }
-
-      to {
-        opacity: 1;
-      }
+  
+.#{$input-group}-expandable {
+  &:not(.pf-m-expanded) {
+    .pf-v6-c-search-input {
+      display: none;
     }
+  }
+
+  .pf-v6-c-search-input {
+    width: 100%;
+    opacity: 0;
+    transition-timing-function: var(--#{$input-group}-expandable__search-input--TransitionTimingFunction--collapse);
+    transition-duration: var(--#{$input-group}-expandable__search-input--TransitionDuration--collapse);
+    transition-property: opacity, scale, display;
+    transition-behavior: allow-discrete;
+    transform-origin: var(--#{$input-group}-expandable__search-input--TransformOriginX) center;
+    scale: var(--#{$input-group}-expandable__search-input--ScaleX) 1;
   }
   
-  .#{$input-group}__search-expandable.pf-m-expanded { 
-    .#{$text-input-group},
-    .#{$button}__icon {
-      @include pf-v6-c-input-group-fade-in;
-    }
-
-    @media (prefers-reduced-motion: no-preference) {
-      .#{$input-group}__item {
-        flex-grow: 0;
-        transition-timing-function: var(--#{$input-group}__text-input--TransitionTimingFunction--Width);
-        transition-duration: var(--#{$input-group}__text-input--TransitionDuration--Width);
-        transition-property: flex-grow;
-        
-        &.pf-m-fill {
-          flex-grow: 1;
-        }
+  &.pf-m-expand-left {
+    --#{$input-group}-expandable__search-input--TransformOriginX: var(--#{$input-group}-expandable__search-input--TransformOriginX--expand-left);
+  }
+  
+  &.pf-m-expanded {
+    .pf-v6-c-search-input {
+      opacity: 1;
+      transition-timing-function: var(--#{$input-group}-expandable__search-input--TransitionTimingFunction--expand);
+      transition-duration: var(--#{$input-group}-expandable__search-input--TransitionDuration--expand);
+      scale: 1 1; 
+    
+      @starting-style {
+        opacity: 0;
+        scale: var(--#{$input-group}-expandable__search-input--ScaleX) 1;
       }
     }
+          
+    .#{$input-group}__item {
+      animation-name: #{$input-group}-expandable-fade;
+      animation-duration: var(--#{$input-group}-expandable__button-icon--TransitionDuration--Opacity);
+      animation-timing-function: var(--#{$input-group}-expandable__button-icon--TransitionTimingFunction--Opacity);
+    }
   }
+}
+
+@keyframes #{$input-group}-expandable-fade {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
 
 .#{$input-group}__item {
   position: relative; // stack items without explicit z-index
